# databend-internals

./: 404.html  CNAME  Cargo.toml  README.md  index.html  main.css  robots.txt  sitemap.xml
.github/workflows/: pages.yaml
docs/: .gitignore  config.toml  index.html
docs/advanced-workshops/: index.html
docs/advanced-workshops/paper-list/: index.html
docs/content/: _index.md
docs/content/docs/: _index.md
docs/content/privacy-policy/: _index.md
docs/contribute-to-databend/: index.html
docs/contribute-to-databend/build-and-more/: index.html
docs/contribute-to-databend/build-with-pgo/: index.html
docs/contribute-to-databend/development-environment/: index.html
docs/contribute-to-databend/faq/: index.html
docs/contribute-to-databend/how-to-benchmark/: index.html
docs/contribute-to-databend/how-to-contribute/: index.html
docs/contribute-to-databend/how-to-profile/: index.html
docs/contribute-to-databend/how-to-write-functions/: index.html
docs/contribute-to-databend/how-to-write-system-table/: index.html
docs/contributing/: index.html
docs/getting-started/: index.html
docs/mini-databend/: index.html
docs/minibend/: index.html
docs/productivity-topics/: index.html
docs/sass/: _custom.scss  main.scss
docs/source-reading/: index.html
docs/the-basics/: index.html
minibend/: .gitignore  Cargo.toml  README.md
minibend/src/: catalog.rs  datablock.rs  error.rs  lib.rs  logical_plan.rs  main.rs  source.rs
minibend/src/datasource/: parquet.rs
minibend/src/source/: parquet.rs
privacy-policy/: index.html
(+70 files in other folders)
