[package]
name = "minibend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
simd = ["arrow2/simd"]

[dependencies]
arrow2 = { version = "0.17", features = ["io_parquet", "io_csv"] }
async-fn-stream = "0.2"
futures = "0.3"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }